--- a/public/admin/style.css
+++ b/public/admin/style.css
@@ -42,7 +42,7 @@ direction: rtl;
   font-weight: 700;
    color: white;
    padding:.5rem 2.5rem ;
-   background-color: #a40a1a;
+   background-color: #2F4858;
    border: none;
    border-radius: 0.25rem;
    
